[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "cython",
    "extension-helpers",
    "numpy>=2,<3",
    "pkgconfig"
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
test-extras = "test"
test-command = "pytest {project}/tests"
# Optional
build-verbosity = 1


[tool.pytest.ini_options]
markers = [
    "plink: tests that compare magenpy results against PLINK backends",
]
